# NestEgg

./: .gitignore  CLAUDE.md  README.md  test_local.sh
backend/: .env.example  pyproject.toml  send_test_email.py  test_email.py  test_transaction_notification.py  test_wechat_push.py
backend/app/: auth.py  config.py  database.py  main.py  models.py
backend/app/routers/: auth.py  export.py  fund_pool.py  reports.py  settings.py  transactions.py
backend/app/services/: email_service.py  notification.py  report.py  scheduler.py
deploy/: backup.sh  deploy.sh  nestegg.service  nginx.conf
docs/: deployment.md  wechat-push.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: AddTransactionModal.vue  DateRangePicker.vue  DateTimePicker.vue  EditTransactionModal.vue  Logo.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  theme.js  transaction.js
frontend/src/utils/: axios.js
frontend/src/views/: Analytics.vue  Assets.vue  Calendar.vue  CashFlow.vue  Dashboard.vue  Login.vue  Settings.vue  Statistics.vue  Transactions.vue
