[project]
name = "nestegg-backend"
version = "1.0.0"
description = "Family accounting system backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlmodel==0.0.22",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "httpx==0.27.2",
    "ruff==0.7.2",
]